Add emails and password
